# phonectl

./: Cargo.toml  LICENSE  README.md  install.sh  phonectl.spec  uninstall.sh
.cargo/: cargo.toml  config.toml
packaging/fedora/: phonectl.spec
src/: adb.rs  audio.rs  config.rs  contacts.rs  crypto.rs  lib.rs  main.rs  unlock.rs
