[package]
name = "phonectl"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
base64 = "0.22.1"
dir = "0.1.2"
dirs = "6.0.0"
engine = "0.0.0"
rand = "0.9.1"
regex = "1.11.1"
reqwest = { version = "0.11", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
tempfile = "3.20.0"
zip = "4.2.0"
