[package]
name = "phonectl"
version = "1.0.0"
authors = ["Sanjai Shaarugesh"]
edition = "2024"
license = "MIT"
description = "A powerful Rust CLI tool to control Android calls over ADB with audio routing"
homepage = "https://github.com/Sanjai-Shaarugesh/phonectl"
repository = "https://github.com/Sanjai-Shaarugesh/phonectl"


[dependencies]
aes-gcm = "0.10.3"
base64 = "0.22.1"
dir = "0.1.2"
dirs = "6.0.0"
engine = "0.0.0"
rand = "0.9.1"
regex = "1.11.1"
reqwest = { version = "0.11", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
tempfile = "3.20.0"
zip = "4.2.0"


[package.metadata.deb]
depends = "libc6 (>= 2.27), liblzma5 (>= 5.2.2)"

